// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lane R2 — the phone is unchanged (golden) coi-vault at rest, iOS 390 1`] = `
{
  "lines": 436,
  "sha256": "0fb90bec63f75c33a917ecb917ceafdcec5b653120879258ce418d66182a34fb",
}
`;

exports[`lane R2 — the phone is unchanged (golden) coi-vault at rest, web 390 1`] = `
{
  "lines": 436,
  "sha256": "0fb90bec63f75c33a917ecb917ceafdcec5b653120879258ce418d66182a34fb",
}
`;

exports[`lane R2 — the phone is unchanged (golden) coi-vault at rest, web 768 1`] = `
{
  "lines": 436,
  "sha256": "0fb90bec63f75c33a917ecb917ceafdcec5b653120879258ce418d66182a34fb",
}
`;

exports[`lane R2 — the phone is unchanged (golden) coi-vault?subId=S1 (the detail early return), iOS 390 1`] = `
{
  "lines": 696,
  "sha256": "f8faa2a1023a9b63684e862ef5f6ca924c1033eeb8e2154d9507581f3ec94cbe",
}
`;

exports[`lane R2 — the phone is unchanged (golden) subs add sheet (add-sub), iOS 390 1`] = `
{
  "lines": 809,
  "sha256": "236751a820b1fd395df7c835d7baf8ffe91ff3376a7d3c51a7954a9561f62869",
}
`;

exports[`lane R2 — the phone is unchanged (golden) subs at rest, iOS 390 1`] = `
{
  "lines": 809,
  "sha256": "f057b27c48bfc83046a48dc389a07b1a72f7737e9395e94d91f7a3341a8a9352",
}
`;

exports[`lane R2 — the phone is unchanged (golden) subs at rest, web 390 1`] = `
{
  "lines": 809,
  "sha256": "f057b27c48bfc83046a48dc389a07b1a72f7737e9395e94d91f7a3341a8a9352",
}
`;

exports[`lane R2 — the phone is unchanged (golden) subs at rest, web 768 1`] = `
{
  "lines": 809,
  "sha256": "f057b27c48bfc83046a48dc389a07b1a72f7737e9395e94d91f7a3341a8a9352",
}
`;

exports[`lane R2 — the phone is unchanged (golden) subs detail open (sub-S1), iOS 390 1`] = `
{
  "lines": 986,
  "sha256": "f63fca9769346f0886efeb33e00dcb72e85ee1bcff8b2cc8fb74cb1640ecbafd",
}
`;
